improved mobile interactions

--- a/projects/design-interactive-merch/index.html
+++ b/projects/design-interactive-merch/index.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         <main>
-            <div class="empty-div"></div>
+            <div></div>
             <div class="text-holder">
                 <div class="header-holder">
                     <h2>Design Interactive Merch</h2>
@@ -40,7 +40,7 @@
 <!--                    <a href="" target="_blank" class="social-link"><p>store</p></a>-->
                 </div>
             </div>
-            <div class="empty-div"></div>
+            <div></div>
         </main>
         <script src="../../scripts/onLoad.js"></script>
     </body>
