--- a/projects/tui-typing-test/index.html
+++ b/projects/tui-typing-test/index.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         <main>
-            <div class="empty-div"></div>
+            <div></div>
             <div class="text-holder">
                 <div class="header-holder">
                     <h2>TUI Typing Test</h2>
@@ -32,7 +32,7 @@
                     <a href="https://github.com/noahham/ssh-type" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
-            <div class="empty-div"></div>
+            <div></div>
         </main>
         <script src="../../scripts/onLoad.js"></script>
     </body>
