--- a/projects/swishscan/index.html
+++ b/projects/swishscan/index.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         <main>
-            <div class="empty-div"></div>
+            <div></div>
             <div class="text-holder">
                 <div class="header-holder">
                     <h2>SwishScan</h2>
@@ -38,7 +38,7 @@
                     <a href="https://github.com/pkrovi17/SwishScan" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
-            <div class="empty-div"></div>
+            <div></div>
         </main>
         <script src="../../scripts/onLoad.js"></script>
     </body>
