--- a/projects/trebbbble/index.html
+++ b/projects/trebbbble/index.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         <main>
-            <div class="empty-div"></div>
+            <div></div>
             <div class="text-holder">
                 <div class="header-holder">
                     <h2>Trebbbble</h2>
@@ -33,7 +33,7 @@
                     <a href="https://github.com/noahham/trebbbble-backend" target="_blank" class="social-link"><p>backend</p></a>
                 </div>
             </div>
-            <div class="empty-div"></div>
+            <div></div>
         </main>
         <script src="../../scripts/onLoad.js"></script>
     </body>
