comments, 404 fix, mobile fixes

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                 font-size: 3rem;
                 color: #e3e3e3;
 
-                margin-top: 13rem;
+                margin-top: 12rem;
                 margin-bottom: 4rem;
                 padding: 0;
 
@@ -40,6 +40,11 @@
             .error-message {
                 color: #999999;
                 text-align: center;
+            }
+
+            @media (max-width: 800px) and (orientation: portrait) {
+                main {margin-top: 0;}
+                .error {margin-top: 24vh;}
             }
         </style>
     </head>
