added images and samples to 4 projects

--- a/index.html
+++ b/index.html
@@ -27,31 +27,31 @@
                     <div class="row">
                         <a href="https://noahham.com/projects/design-interactive-merch/" class="card">
                             <h2 class="card-title">DI Merch</h2>
-                            <p class="card-description">A clothing design for designers.</p>
+                            <p class="card-description">A clothing design for<br>designers.</p>
                         </a>
                         <a href="https://noahham.com/projects/duckweb-autofill/" class="card">
                             <h2 class="card-title">DuckWeb Autofill</h2>
-                            <p class="card-description">An autofill extension for UO's DuckWeb.</p>
+                            <p class="card-description">An autofill extension for<br>UO's DuckWeb.</p>
                         </a>
                     </div>
                     <div class="row">
                         <a href="https://noahham.com/projects/swishscan/" class="card">
                             <h2 class="card-title">SwishScan</h2>
-                            <p class="card-description">A basketball form improvement app.</p>
+                            <p class="card-description">A basketball form<br>improvement app.</p>
                         </a>
                         <a href="https://noahham.com/projects/trebbbble/" class="card">
                             <h2 class="card-title">Trebbbble</h2>
-                            <p class="card-description">A website for music recognition from video.</p>
+                            <p class="card-description">A website for music<br>recognition from video.</p>
                         </a>
                     </div>
                     <div class="row">
                         <a href="https://noahham.com/projects/quackhacks-rebrand/" class="card">
                             <h2 class="card-title">QH Rebrand</h2>
-                            <p class="card-description">A new identity for a premier hackathon.</p>
+                            <p class="card-description">A new identity for a<br>premier hackathon.</p>
                         </a>
                         <a href="https://noahham.com/projects/tui-typing-test/" class="card">
                             <h2 class="card-title">TUI Typing Test</h2>
-                            <p class="card-description">An SSH-accessible typing speed test.</p>
+                            <p class="card-description">An SSH-accessible typing<br>speed test.</p>
                         </a>
                     </div>
                 </div>
