--- a/projects/design-interactive-merch/index.html
+++ b/projects/design-interactive-merch/index.html
@@ -29,15 +29,16 @@
                 <h3>Initial Direction & Feedback</h3>
                 <p>It all started with the familiar grainy gradient. Seen across the organization’s social media and presentations, it was a necessity for the design. I generated a quick placeholder gradient and aimed for a deconstructed look by separating the arrow and text of the DI logo.</p>
                 <p>Because the brand embodied a balanced mix between minimalist and hand-drawn, I chose to draw a web icon and a mouse cursor, both tech-based symbols inspired by the tech-based foundations of the organization.</p>
+                <div class="tall-image-holder"><img class="display-img" src="initial-design.png" alt="Initial Design"></div>
                 <p>However, during initial reviews, organization leaders felt that there was too much tech influence in my design. While the organization did have a tech background, it represented <i>all</i> types of design, not just technology.</p>
 
                 <h3>Final Product</h3>
                 <p>In order to better represent all design but still maintain technological roots, I kept the cursor but replaced the web icon with a more universally recognized lightbulb. After I was satisfied with the higher-level hierarchy of the design, I went back through the rest. </p>
                 <p>Familiar starbursts from the organization’s Instagram filled awkward space; the underlining of “design interactive” improves legibility while also being a nod to Figma’s UI; the gradient directs attention to the text after being fully rebuilt in Photoshop. Finally, a small blurb of text at the bottom explains how the organization’s cohort program led to the creation of the shirt itself.</p>
+                <div class="tall-image-holder"><img class="display-img" src="final-design.png" alt="Final Design"></div>
                 <p>In the end, my design was selected amongst six others to become the first piece that the organization released for purchase.</p>
                 <div class="link-holder">
                     <a href="https://www.designinteractive-uw.com/" target="_blank" class="social-link"><p>webpage</p></a>
-<!--                    <a href="" target="_blank" class="social-link"><p>store</p></a>-->
                 </div>
             </div>
             <div></div>
