--- a/projects/duckweb-autofill/index.html
+++ b/projects/duckweb-autofill/index.html
@@ -25,6 +25,7 @@
                 </div>
 
                 <p>A basic Chrome extension that autofills your University of Oregon DuckWeb login info.</p>
+                <div class="tall-image-holder"><img class="display-img" src="demo.jpg" alt="Demo"></div>
                 <p>The DuckWeb login screen (and honestly the entirety of DuckWeb as a whole) is widely known for both looking and functioning like complete garbage. One particular problem with logging in is that normal password apps can't autofill the ID and PAC because both input boxes are marked as password inputs.</p>
                 <p>This extension is specialized to fix this issue by hard-coding the HTML ID's of each input, and each time a DuckWeb page is loaded, it looks for those ID's and fills in the given info.</p>
 
