added demo for trebbbble

--- a/projects/trebbbble/index.html
+++ b/projects/trebbbble/index.html
@@ -22,7 +22,7 @@
                 height: 30vh;
                 border-radius: 10px;
 
-                margin: 5rem auto;
+                margin: 4rem;
                 padding: 1rem;
                 transition: all 0.5s;
             }
