updated class name

--- a/projects/swishscan/index.html
+++ b/projects/swishscan/index.html
@@ -30,12 +30,12 @@
                 <p>My initial plan was a one-screen design of a main page with an archived data page and professional player database page available as pop-ups after clicking a button.</p>
                 <p>The entire design was centered around subconscious memorization. When our users are on-the-go logging their shooting form, our app might be difficult to navigate when they’ve just started to use it or the buttons aren’t in very memorable spots. With less touch targets, there is simply less room for error.</p>
                 <p>To test the app, team members and external users worked their way through trying to understand it without guidance. The goal was to see if they could develop muscle memory on their own, and how long it would take.</p>
-                <div class="tall-image-holder"><img class="display-img" src="initial-design.png" alt="Initial Design"></div>
+                <div class="item-holder"><img class="display-img" src="initial-design.png" alt="Initial Design"></div>
                 <p>An issue that users consistently came across was comparing their own data to a professional player. Everything was on one screen so you had to close the archive screen and then open the database screen. It was slow, unintuitive, and wrong.</p>
 
                 <h3>Final Product</h3>
                 <p>For the final design, I switched to a simple tab layout. While it wasn’t as visually clean as the tab-less, single page setup, it was well worth the sacrifice in order to promote the app’s familiarity after using other apps that had tabs for different pages (like Spotify, Amazon, or Canvas).</p>
-                <div class="tall-image-holder"><img class="display-img" src="final-design.png" alt="Final Design"></div>
+                <div class="item-holder"><img class="display-img" src="final-design.png" alt="Final Design"></div>
                 <div class="link-holder">
                     <a href="https://github.com/pkrovi17/SwishScan" target="_blank" class="social-link"><p>github</p></a>
                 </div>
