--- a/projects/trebbbble/index.html
+++ b/projects/trebbbble/index.html
@@ -108,7 +108,7 @@
 
                 <p>A user-friendly website that can recognize music from short-form videos.</p>
 
-                <div class="tall-image-holder">
+                <div class="item-holder">
                     <div id="song-card">
                         <div class="cover-and-links">
                             <img src="../../media/cover.jpg" alt="Album Cover" id="cover">
