updated png to webp for faster loading times

--- a/projects/tui-typing-test/index.html
+++ b/projects/tui-typing-test/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <p>A terminal-based typing test available to everyone through SSH.</p>
-                <div class="item-holder"><img class="display-img" src="demo.png" alt="Demo"></div>
+                <div class="item-holder"><img class="display-img" src="demo.webp" alt="Demo"></div>
                 <p>Inspired by TUI interfaces like ssh terminal.shop, I wanted to create something similar. Terminal-based interfaces are especially interesting because they rework the entire idea of space compared to a typical HTML interface. As it turns out, UI/UX changes entirely when the interface must be text-only and navigated by keyboard. A TUI strips away automated layout tools and forces you to actually think about spacing, flow, and hierarchy in a different way.</p>
                 <p>Before this project, most of my programming has been with HTML, CSS, and Python. I was pretty hesitant to approach Golang and Bubbletea but it turned out a lot less complicated than I initially thought it would be. After a ton of trial and error, I even got the interface running on an Oracle server.</p>
 
