--- a/projects/design-interactive-merch/index.html
+++ b/projects/design-interactive-merch/index.html
@@ -36,7 +36,7 @@
                 <p>In order to better represent all design but still maintain technological roots, I kept the cursor but replaced the web icon with a more universally recognized lightbulb. After I was satisfied with the higher-level hierarchy of the design, I went back through the rest. </p>
                 <p>Familiar starbursts from the organization’s Instagram filled awkward space; the underlining of “design interactive” improves legibility while also being a nod to Figma’s UI; the gradient directs attention to the text after being fully rebuilt in Photoshop. Finally, a small blurb of text at the bottom explains how the organization’s cohort program led to the creation of the shirt itself.</p>
                 <div class="item-holder"><img class="display-img" src="final-design.webp" alt="Final Design"></div>
-                <p>In the end, my design was selected amongst six others to become the first piece that the organization released for purchase.</p>
+                <p>In the end, my design was awarded second amongst six other designs for the organization.</p>
                 <div class="link-holder">
                     <a href="https://www.designinteractive-uw.com/" target="_blank" class="social-link"><p>webpage</p></a>
                 </div>
