updated the home page and removed a lot of animations to make the page more tactile

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body class="hidden-scrollbar">
+    <div class="header">
+        <a href="http://noahham.com" class="logo-link"><img class="logo" src="media/favicon-dark.png" alt="logo"></a>
+        <div class="navbar-space"></div>
+<!--        <div class="hire-holder"><h2 class="hire-button">Contact</h2></div>-->
+
+    </div>
         <main>
+
             <!-- HERO SCREEN -->
-            <a href="#projects" id="name">
-                <h1 class="hero-title">noah</h1>
-                <div style="display:flex;">
-                    <h1 class="hero-title" id="ham" style="margin-bottom:4rem;">ham</h1>
-                    <h1 class="fading-dot">::</h1>
-                </div>
-                <h1 class="hero-title dot">..</h1>
-                <h1 class="hero-title dot">.</h1>
-            </a>
+            <div class="hero-holder">
+                <h1 class="hero-title">NOAH HAM</h1>
+                <h3>Product Designer and UI/UX Programmer.</h3>
+            </div>
 
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
